--- a/Index.html
+++ b/Index.html
@@ -16,13 +16,19 @@
       <p>Tomás Euliarte</p>
     </header>
 
-    <section class="container">
-      <!--<article id="related">
+    <aside>
+      <article id="related">
         <h5 id="relatedTitle">Related Content</h5>
         <ul>
-          <li><a href="/related/Juego.html">Juego: Tu peso en otro planeta</a></li>
+          <li><a href="/Juego/Juego.html">Your weight in another planet</a></li>
         </ul>
-      </article>-->
+      </article>
+    </aside>
+
+    <section class="container">
+      
+
+
       <!-- About Me Section-->
       <article>
         <h1><span>About Me.</span></h1>
@@ -140,14 +146,19 @@
       </article>
       <article>
         <h1>Follow me at:</h1>
-        <a href="https://github.com/TommyEu"><img src="/img/GitHubLogo.png" alt="GitHub" width="50"></a>
-        <a href="https://facebook.com"><img src="/img/FacebookLogo.png" alt="Facebook" width="50"></a>
-        <a href="https://linkedin.com"><img src="/img/LinkedInLogo.jpg" alt="Linkedin" width="50"></a>
+        <div id="FollowMe"> 
+          <a href="https://github.com/TommyEu"><img src="/img/GitHubLogo.png" alt="GitHub" width="50"></a>
+          <a href="https://facebook.com"><img src="/img/FacebookLogo.png" alt="Facebook" width="50"></a>
+          <a href="https://linkedin.com"><img src="/img/LinkedInLogo.jpg" alt="Linkedin" width="50"></a>
+        </div>        
       </article>
     </section>
     <footer>
-      <a href="#titulo">Ir al comienzo</a>
-      <a href="mailto:tomaslautaroeuliarte@gmail.com">Contactame aquí</a>
+      <section>
+        <a href="#titulo">Ir al comienzo</a>
+        <a href="mailto:tomaslautaroeuliarte@gmail.com">Contactame aquí  </a>
+      </section>
+      
       <p>Copyright 2021</p>
     </footer>
   </body>
